--- a/index.html
+++ b/index.html
@@ -1,124 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Betting Predictor</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(135deg, #1f1f1f, #121212);
-      color: #fff;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-    }
-
-    h1 {
-      margin-bottom: 10px;
-      font-size: 2.2em;
-      color: #00ffc3;
-      text-shadow: 0 0 10px #00ffc3aa;
-    }
-
-    .predictor-box {
-      background: #222;
-      padding: 30px;
-      border-radius: 20px;
-      box-shadow: 0 0 20px #00ffc370;
-      text-align: center;
-    }
-
-    #result {
-      margin-top: 25px;
-      font-size: 2.5em;
-      font-weight: bold;
-      color: #f0f0f0;
-      transition: all 0.3s ease-in-out;
-      text-shadow: 0 0 10px #00ffc3cc;
-    }
-
-    .start-btn {
-      background: #00ffc3;
-      color: #111;
-      padding: 15px 35px;
-      font-size: 1.2em;
-      font-weight: bold;
-      border: none;
-      border-radius: 10px;
-      cursor: pointer;
-      box-shadow: 0 0 10px #00ffc3aa;
-      transition: transform 0.2s;
-    }
-
-    .start-btn:hover {
-      transform: scale(1.05);
-    }
-
-    .red { color: #ff4d4d; }
-    .green { color: #4dff4d; }
-    .big, .small { color: #ffcc00; }
-
-    .hidden {
-      display: none;
-    }
-
-    .info-text {
-      margin-top: 20px;
-      font-size: 1em;
-      color: #ccc;
-      text-shadow: 0 0 5px #00ffc3aa;
-    }
-
-    .info-text span {
-      color: #00ffc3;
-      font-weight: bold;
-    }
-  </style>
-</head>
-<body>
-
-  <h1>🎲 Signal Predictor by ES bhai 🫂 (private server)</h1>
-
-  <div class="predictor-box">
-    <button class="start-btn" id="startBtn" onclick="showResult()">START</button>
-    <div id="result">--</div>
-
-    <div class="info-text">
-      💰 <span>Earn Limit:</span> ₹300 per day
-    </div>
-    <div class="info-text">
-      🎯 <span>Level Maintain:</span> ₹500 × 4 Levels
-    </div>
-  </div>
-
-  <script>
-    function showResult() {
-      const startBtn = document.getElementById("startBtn");
-      startBtn.classList.add("hidden");
-
-      const colors = ["RED", "GREEN"];
-      const sizes = ["BIG", "SMALL"];
-      const allOptions = [...colors, ...sizes];
-      const random = allOptions[Math.floor(Math.random() * allOptions.length)];
-
-      const resultDiv = document.getElementById("result");
-      resultDiv.className = '';
-
-      if (random === "RED") resultDiv.classList.add("red");
-      else if (random === "GREEN") resultDiv.classList.add("green");
-      else if (random === "BIG") resultDiv.classList.add("big");
-      else if (random === "SMALL") resultDiv.classList.add("small");
-
-      resultDiv.innerText = random;
-
-      setTimeout(() => {
-        startBtn.classList.remove("hidden");
-      }, 5000);
-    }
-  </script>
-
-</body>
-</html>
+404 error 
